--- a/styles/Place.module.css
+++ b/styles/Place.module.css
@@ -7,11 +7,16 @@
   width: 30vw;
   background: rgba(224, 81, 224, 0.226);
 
-  border: solid red 3px;
+  border: solid black 3px;
   border-radius: 3px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+.photosContainer {
+  height: 600px;
+  width: auto;
 }
 
