--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,32 +1,68 @@
 .navBar {
   height: 6vh;
   width: 100vw;
-  border-radius: 5px;
+  border-radius: 8px;
   position: fixed;
-  background:#2b2d4252;
+  /* background:#2b2d4252; */
   display: grid;
   grid-template-rows: 6vh;
   padding-right: 2rem;
   grid-template-columns: repeat(2, 50%);
   opacity: 75%;
   align-items: center;
-  color: white;
+  color: #2b2d42;
+  margin-top: 2vh;
   flex-direction: row;
-  box-shadow: 0 0 6px #2b2d42d2;;
 }
 
 .logo {
   padding-top: 1px;
   align-self: center;
   justify-self: left;
+  display: flex;
+  justify-content: center;
   margin: 0;
-  padding-left: 2rem;
+  height: 70px;
+  width: 70px;
+  margin-left: 2vw;
+  margin-top: 0.8vh;
   cursor: pointer;
+  border-radius: 8px;
+  background: #2b2d42;
+  box-shadow: 1px 2px 3px rgb(136, 127, 127);
+
+}
+
+.logo:hover {
+  box-shadow: none;
+  box-shadow: 0 0 2px rgb(158, 148, 148);
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.6s;
+
 }
 
 .links {
   display: flex;
   gap: 20px;
   justify-content: right;
+  font-size: 1.2rem;
+
+}
+
+.links > a {
+  background: #C9F9FF;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  margin-right: 0.5vw;
+  border-radius: 5px;
+  box-shadow: 1px 2px 3px rgb(158, 148, 148);
+}
+
+.links > a:hover {
+  box-shadow: none;
+  box-shadow: 0 0 2px rgb(158, 148, 148);
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.6s;
 
 }
